Fix spacing size

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -163,7 +163,7 @@ div.buttons {
 	color: #ff41a9;
 	text-align: center;
 	margin: auto;
-	height: 5vh;
+	height: 4.35vh;
 }
 .poem-data {
 	margin: 1rem 0;
